# gozle_ads_backend

./: .gitignore  Dockerfile  README.md  dist.env  index.py  manage.py  pyproject.toml  schema.yml
ads/: admin.py  consumers.py  fields.py  filters.py  models.py  pagination.py  ranker.py  serializers.py  tasks.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0001_initial_squashed_0002_alter_video_image.py  0002_alter_banner_cycle_duration.py  0002_alter_video_skip_duration.py  0002_alter_video_status.py  0002_banner_age_from_banner_age_to_imput_age_from_and_more.py  0002_banner_created_at_banner_updated_at_imput_created_at_and_more.py  0002_banner_deleted_at_imput_deleted_at_video_deleted_at_and_more.py  0002_video_skip_duration.py  0003_alter_banner_age_from_alter_banner_age_to_and_more.py  0003_alter_banner_cycle_duration.py  0003_alter_banner_devices_alter_imput_devices_and_more.py  0003_alter_banner_image_alter_imput_image_squashed_0006_alter_banner_image_alter_imput_image.py  0003_banner_language_imput_language_video_language.py  0004_alter_banner_cycle_duration.py  0004_banner_platform_imput_platform_video_platform.py  0004_rename_age_from_banner_max_age_and_more.py  0005_alter_banner_image_alter_imput_image_and_more.py  0005_banner_provinces_imput_provinces_video_provinces.py  0005_rename_platform_banner_platforms_and_more.py  0006_alter_banner_devices_alter_imput_devices_and_more.py  (+7 more)
core/: tasks.py
devices/: models.py  serializers.py  urls.py  views.py
gozle_ads/: asgi.py  celery.py  urls.py  wsgi.py
helpers/: base64_test_image.py  cache.py  celery_beat_scheduler.py  converters.py  custom_redis_cluster.py  filters.py  mixins.py  permissions.py  serializers.py  tests.py  utils.py  validators.py  views.py  views_utils.py
locations/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
(+15 files in other folders)
