[tool.poetry]
name = "gozle-ads"
version = "0.1.0"
description = ""
authors = ["Rowsen <bayramovw0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-rest-framework = "^0.1.0"
django-debug-toolbar = "^4.2.0"
psycopg2 = "^2.9.7"
pillow = "^10.0.1"
channels = "^4.0.0"
daphne = "^4.0.0"
drf-extra-fields = "^3.7.0"
drf-spectacular = "^0.26.5"
django-multiselectfield = "^0.1.12"
six = "^1.16.0"
django-jet-reboot = "^1.3.3"
django-otp = "^1.2.4"
qrcode = "^7.4.2"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"
channels-redis = "^4.1.0"
django-oauth-toolkit = "^2.3.0"
django-cors-headers = "^4.3.0"
django-filter = "^23.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
